chore: replace mentions of master branch with main

--- a/c/html/main/igraph-Games.html
+++ b/c/html/main/igraph-Games.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: develop
+langversion: main
 ---
 
 {% raw %}
@@ -1304,10 +1304,10 @@ given simple graph and shuffling its vertices.
 <td><p><span class="term"><em class="parameter"><code>permutation</code></em>:</span></p></td>
 <td><p>
   A permutation to apply to the vertices of the
-       generated graph. The i-th element of the permutation vector
-       encodes the index of the vertex in the <span class="emphasis"><em>original</em></span> graph that will
-       become the i-th vertex in the generated graph. It can also be a null
-       pointer, in which case the vertices will not be permuted.
+       generated graph. The i-th element of the vector specifies the index
+       of the vertex in the <span class="emphasis"><em>original</em></span> graph that will become vertex i in the
+       new graph. It can also be a null pointer, in which case the vertices
+       will not be permuted.
 </p></td>
 </tr>
 </tbody>
@@ -1419,10 +1419,10 @@ Sample two random graphs, with given correlation.
 <td><p><span class="term"><em class="parameter"><code>permutation</code></em>:</span></p></td>
 <td><p>
   A permutation to apply to the vertices of the
-       second graph. The i-th element of the permutation vector
-       encodes the index of the vertex in the <span class="emphasis"><em>first</em></span> graph that will
-       become the i-th vertex in the second graph. It can also be a null
-       pointer, in which case the vertices will not be permuted.
+       generated graph. The i-th element of the vector specifies the index
+       of the vertex in the <span class="emphasis"><em>first</em></span> graph that will become vertex i in the
+       second graph. It can also be a null pointer, in which case the vertices
+       will not be permuted.
 </p></td>
 </tr>
 </tbody>
