--- a/c/html/main/ix01.html
+++ b/c/html/main/ix01.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: develop
+langversion: main
 ---
 
 {% raw %}
