--- a/c/html/main/index.html
+++ b/c/html/main/index.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: develop
+langversion: main
 ---
 
 {% raw %}
@@ -63,9 +63,9 @@ langversion: develop
 </div>
 </div>
 </div></div>
-<div><p class="releaseinfo">1.0.0-rc1-109-ga72dcdce5</p></div>
+<div><p class="releaseinfo">1.0.0-rc1-114-g133f73958</p></div>
 <div><div class="legalnotice">
-<a name="id-1.1.4"></a><p>This manual is for igraph, version 1.0.0-rc1-109-ga72dcdce5.</p>
+<a name="id-1.1.4"></a><p>This manual is for igraph, version 1.0.0-rc1-114-g133f73958.</p>
 <p>
       Copyright (C) 2005-2019 Gábor Csárdi and Tamás Nepusz.
       Copyright (C) 2020-2025 igraph development team.
