chore: added igraph 1.0.0 release

--- a/c/html/develop/igraph-Operators.html
+++ b/c/html/develop/igraph-Operators.html
@@ -2330,7 +2330,7 @@ Handbook of Product Graphs (2nd ed.). CRC Press.
 igraph_error_t igraph_rooted_product(igraph_t *res,
                                      const igraph_t *g1,
                                      const igraph_t *g2,
-                                     const igraph_int_t root);
+                                     igraph_int_t root);
 </pre></div>
 <p>
 </p>
