--- a/c/html/develop/index.html
+++ b/c/html/develop/index.html
@@ -63,9 +63,9 @@ langversion: develop
 </div>
 </div>
 </div></div>
-<div><p class="releaseinfo">1.0.0-rc1-109-ga72dcdce5</p></div>
+<div><p class="releaseinfo">1.0.0-2-g534af079d</p></div>
 <div><div class="legalnotice">
-<a name="id-1.1.4"></a><p>This manual is for igraph, version 1.0.0-rc1-109-ga72dcdce5.</p>
+<a name="id-1.1.4"></a><p>This manual is for igraph, version 1.0.0-2-g534af079d.</p>
 <p>
       Copyright (C) 2005-2019 Gábor Csárdi and Tamás Nepusz.
       Copyright (C) 2020-2025 igraph development team.
