--- a/c/html/1.0.0/igraph-Operators.html
+++ b/c/html/1.0.0/igraph-Operators.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: main
+langversion: 1.0.0
 ---
 
 {% raw %}
