--- a/c/html/1.0.0/index.html
+++ b/c/html/1.0.0/index.html
@@ -5,7 +5,7 @@ mainheader: igraph Reference Manual
 lead: For using the igraph C library
 vmenu: true
 doctype: html/
-langversion: main
+langversion: 1.0.0
 ---
 
 {% raw %}
@@ -63,9 +63,9 @@ langversion: main
 </div>
 </div>
 </div></div>
-<div><p class="releaseinfo">1.0.0-2-g534af079d</p></div>
+<div><p class="releaseinfo">1.0.0</p></div>
 <div><div class="legalnotice">
-<a name="id-1.1.4"></a><p>This manual is for igraph, version 1.0.0-2-g534af079d.</p>
+<a name="id-1.1.4"></a><p>This manual is for igraph, version 1.0.0.</p>
 <p>
       Copyright (C) 2005-2019 Gábor Csárdi and Tamás Nepusz.
       Copyright (C) 2020-2025 igraph development team.
